[tool.poetry]
name = "datek-agar-core"
version = "0.0.0"
description = "Agar game core"
authors = ["DAtek <dudasa7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
run-server = 'agar_core.run_server:run_server'

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.2"
pydantic = "^1.7.3"
numpy = "^1.19.5"
uvloop = {version = "^0.14.0", optional = true}
click = "^7.1.2"
datek-app-utils = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
pytest-click = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
uvloop = ["uvloop"]
